<resources>
    <string name="app_name">ReferAI</string>
    <string name="rules_button_text">Rules</string>
    <string name="go_to_live_preview_button_text">Live</string>
    <string name="go_to_recording_button_text">Record</string>
    <string name="go_to_gallery_button_text">Gallery</string>
    <string name="home_title_text">REFERAI</string>

    <string name="thumbnail">miniature</string>
    <string name="title">Titre</string>
    <string name="duration">0:00</string>
    <string name="content_video_start_button">Start video recording</string>
    <string name="live_preview_text"> </string>
    <string name="rules_title_part_1_usage">Usage Rules</string>

    <string name="usage_rules_text">- Lorsque la personne se filme pour être arbitré, elle doit se filmer de face ou de 3/4 de façon à ce que tout sont corps soit visible.\n\n
- L’enregistrement du mouvement débutera automatiquement dès que la position de départ sera détectée.\n\n
- Il existe deux modes d’arbitrage : \n\n
    \t\t- Le premier en temps réel qui, une fois le mouvement terminé, et l’enregistrement stoppé, indique de quel mouvement il s’agit et s’il est correcte ou non. Ce mode ne permet pas d’enregistrer les mouvements simultanément \n\n
    \t\t- Le second permet d’enregistrer le mouvement, mais il n’est pas en temps réel donc nécessite un temps d’attente après la fin de la vidéo afin de savoir si le mouvement est correcte ou non.</string>

    <string name="rules_title_part_2_fouls">Detected fouls</string>

    <string name="detected_fouls_text">Il faut préciser les règle d’arbitrage prise en charge par l’application. En effet, toutes les règles n’ont pas pu être implanté. Par exemple, certains mouvements exigent un ordre de départ donné par l’arbitre pour pouvoir démarrer, cette règle n’a pas pu être ajouté car elle nécessitait l’utilisation du micro mais surtout des données sonores que nous n’avons pas pu récolter.\n\n

Les règles que nous avons donc pu ajouter sont les suivantes :\n\n

\tSquat :\n\n

- Au départ, la position doit être droite.\n\n
- Lors du mouvement, le passage de l’articulation les hanches sous celle des genoux\n\n
- A la fin du mouvement, l’athlète doit finir en position droite comme la position de départ\n\n

\tBench :\n\n

- Au départ, les coudes doivent être tendus\n\n
- En bas du mouvement, la barre doit être en contact avec l’athlète\n\n
- Du début à la fin du mouvement, les fesses doivent rester en contact avec le banc\n\n
- A la fin du mouvement, les coudes doivent revenir tendu.\n\n

\tDeadlift :\n\n

- En haut du mouvement, la personne doit se tenir droite, genoux, hanches et épaules alignées ou le haut du corps légèrement en arrière</string>
    <string name="squat_name">Squat</string>
    <string name="bench_name">Bench</string>
    <string name="deadlift_name">Deadlift</string>
    <string name="no_mouvement">Aucune detection</string>
</resources>