<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RulesFragment"
    android:background="?attr/colorOnPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rules_title_part_1_usage"
            android:textSize="30sp"
            android:textAlignment="center"
            android:fontFamily="@font/mosaiccaps"
            android:textColor="?attr/colorPrimary"/>

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usage_rules_text"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:textColor="?attr/colorPrimary">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rules_title_part_2_fouls"
            android:textSize="30sp"
            android:textAlignment="center"
            android:layout_marginTop="20sp"
            android:fontFamily="@font/mosaiccaps"
            android:textColor="?attr/colorPrimary">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detected_fouls_text"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:textColor="?attr/colorPrimary">

        </TextView>
    </LinearLayout>




</ScrollView>