<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:id="@+id/parent_layout"
    tools:context=".view.Accueil"
    android:background="?attr/colorOnPrimary">


    <TextView
        android:id="@+id/title_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_title_text"
        android:fontFamily="@font/title_font"
        android:textSize="70sp"
        android:textAlignment="center"
        android:layout_marginTop="40dp"
        android:textColor="?attr/colorPrimary">
    </TextView>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/whistle"
        app:tint="?attr/colorPrimary">
    </ImageView>

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                android:id="@+id/go_to_live_preview_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button_shape_reversed"
                android:drawableTop="@drawable/pose_detection"
                android:drawableTint="?attr/colorPrimary"
                android:text="@string/go_to_live_preview_button_text"
                android:textColor="?attr/colorPrimary"
                android:layout_marginRight="5dp"
                >
            </Button>

            <Button
                android:id="@+id/go_to_recoding_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:background="@drawable/custom_button_shape"
                android:drawableTop="@drawable/camera"
                android:drawableTint="?attr/colorPrimary"
                android:text="@string/go_to_recording_button_text"
                android:textColor="?attr/colorPrimary"
                android:layout_marginLeft="5dp"
                >
            </Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            >
            <Button
                android:id="@+id/rules_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button_shape_reversed"
                android:drawableTop="@drawable/rulebook"
                android:drawableTint="?attr/colorPrimary"
                android:text="@string/rules_button_text"
                android:textColor="?attr/colorPrimary"
                android:layout_marginRight="5dp"
                >
            </Button>

            <Button
                android:id="@+id/go_to_gallery_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button_shape"
                android:drawableTop="@drawable/gallery"
                android:drawableTint="?attr/colorPrimary"
                android:text="@string/go_to_gallery_button_text"
                android:textColor="?attr/colorPrimary"
                android:layout_marginLeft="5dp"
                >
            </Button>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>